[project]
name = "fortniteskinchecker"
version = "0.1.0"
description = "A Discord bot that displays Fortnite account skins and profile information using the official Epic Games API."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "discord-py (>=2.6.4,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "sentry-sdk (>=2.45.0,<3.0.0)"
]
